--- a/assets/misc/index.html
+++ b/assets/misc/index.html
@@ -1,37 +1,58 @@
 <html>
-    <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=.85">
     <title>Directory Listing</title>
-    </head>
-    <body style="
+</head>
+
+<body style="
     background-color: #101010; 
     color: #FFFFFF;
     margin: 2.5%;">
-        <h1>Directory Listing</h1>
-        <hr>
-        <table style="width:100%">
-            <tr>
-                <th>Name</th>
-                <th>Size</th>
-                <th>Creation Date</th>
-                <th>Last Modified</th>
-            </tr>
-            <tr>
-                <td><center><a href="style.css">style.css</a></center></td>
-                <td><center>1.34K</center></td>
-                <td><center>2022-08-29 12:10</center></td>
-                <td><center>2024-04-07 22:59</center></td>
-            </tr>
-            <tr>
-                <td><center><a href="index.html">index.html</a></center></td>
-                <td><center>1.23K</center></td>
-                <td><center>2022-09-12 23:39</center></td>
-                <td><center>2024-04-07 23:00</center></td>
-            </tr>
-            <tr>
-                <td><center><a href="https://so.bang.cl/assets">..</a></center></td>
-            </tr>
-        </table>
-    </body>
+    <h1>Directory Listing</h1>
+    <hr>
+    <table style="width:100%">
+        <tr>
+            <th>Name</th>
+            <th>Size</th>
+            <th>Creation Date</th>
+            <th>Last Modified</th>
+        </tr>
+        <tr>
+            <td>
+                <center><a href="style.css">style.css</a></center>
+            </td>
+            <td>
+                <center>1.85K</center>
+            </td>
+            <td>
+                <center>2022-08-29 12:10</center>
+            </td>
+            <td>
+                <center>2026-01-06 02:23</center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center><a href="index.html">index.html</a></center>
+            </td>
+            <td>
+                <center>1.44K</center>
+            </td>
+            <td>
+                <center>2022-09-12 23:39</center>
+            </td>
+            <td>
+                <center>2026-01-06 02:31</center>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <center><a href="https://so.bang.cl/assets">..</a></center>
+            </td>
+        </tr>
+    </table>
+</body>
+
 </html>
