--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 					<div class="title">
 						<h1>hello there</h1>
 					</div>
+					<code class="mhint">hold elements and go back from modal for more info, if you in mobile</code>
 					<hr>
 				</header>
 				<div class="subtitle">
