--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div class="title">
 						<h1>hello there</h1>
 					</div>
-					<code class="mhint">hold links and go back from modal for more info, if you in mobile</code>
+					<samp class="mhint">hold links and go back from modal for more info, if you in mobile</samp>
 					<hr>
 				</header>
 				<div class="subtitle">
