--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 					<div class="title">
 						<h1>hello there</h1>
 					</div>
-					<samp class="mhint">hold links and go back from dialog window for more info, if you in mobile</samp>
+					<!-- in mobile when you holded link will popout modal window that covers page behind, but you can also 
+					 access it after you touch anywhere behind modal window -->
+					<samp class="mhint">hold links and go back from modal window for more info, if you in mobile</samp>
 					<hr>
 				</header>
 				<div class="subtitle">
