--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 					<div class="title">
 						<h1>hello there</h1>
 					</div>
-					<!-- in mobile when you holded link will popout modal window that covers page behind, but you can also 
-					 access it after you touch anywhere behind modal window -->
+					<!-- in mobile when you holded link will popout modal window that completely covers page behind, 
+					 but you can also access it after you touch anywhere behind modal window -->
 					<samp class="mhint">hold links and go back from modal window for more info, if you in mobile</samp>
 					<hr>
 				</header>
