modified:   index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<big><a href="https://kisoqual.t.me/">РµС‡</a><a href="https://tx.me/s/kisoqual">РіСЂ</a><a
 							href="https://t.me/s/kisoqual">РµС‡</a><a
 							href="https://max.ru/join/plj4a2F03ABZ9xtKE6cRzXkLeDAmYWBsZP5N1TC7qC0"
-							title="invite only">РіСЂ</a><a href="https://vk.com/kisoqual">ёСЃР</a><a
+							title="aka TamTam2, invite only">РіСЂ</a><a href="https://vk.com/kisoqual">ёСЃР</a><a
 							href="https://vk.com/im/channels/-231361159" title="authorized only">ёСЃР</a><a
 							href="https://soundcloud.com/kisoqual">РЅР</a><a
 							href="https://kisoqual.bandcamp.com">РЅР</a><a
